// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Step Component - Snapshot Tests > renders the Step with Edit Button 1`] = `
<div>
  <section
    class="flex flex-row border-0 border-t-[1px] border-solid border-t-[--ods-color-neutral-100] pt-5 mb-5"
  >
    <div
      class="basis-[40px]"
    >
      <span
        class="_icon_i4xp0_2 _icon--check_i4xp0_61 block p-[12px] text-[20px] text-[--ods-color-primary-500]"
      />
    </div>
    <div
      class="basis-full px-5"
    >
      <div
        class="flex flex-col md:flex-row"
      >
        <div
          class="font-normal leading-[43px] flex p-0 m-0 w-full md:w-5/6 text-[--ods-color-text]"
        >
          <h4
            class="_text--heading-4_1aw48_31"
          >
            Test Step
          </h4>
        </div>
      </div>
      <div
        data-testid="subtitle"
      >
        This is a test step
      </div>
      <div
        class="mt-5"
        data-testid="content"
      >
        <p>
          Step Content
        </p>
      </div>
      <div
        class="flex items-center gap-6 mt-6"
      />
    </div>
  </section>
</div>
`;

exports[`Step Component - Snapshot Tests > renders the Step with Edit Button disabled 1`] = `
<div>
  <section
    class="flex flex-row border-0 border-t-[1px] border-solid border-t-[--ods-color-neutral-100] pt-5 mb-5"
  >
    <div
      class="basis-[40px]"
    >
      <span
        class="_icon_i4xp0_2 _icon--check_i4xp0_61 block p-[12px] text-[20px] text-[--ods-color-primary-500]"
      />
    </div>
    <div
      class="basis-full px-5"
    >
      <div
        class="flex flex-col md:flex-row"
      >
        <div
          class="font-normal leading-[43px] flex p-0 m-0 w-full md:w-5/6 text-[--ods-color-text]"
        >
          <h4
            class="_text--heading-4_1aw48_31"
          >
            Test Step
          </h4>
        </div>
      </div>
      <div
        data-testid="subtitle"
      >
        This is a test step
      </div>
      <div
        class="mt-5"
        data-testid="content"
      >
        <p>
          Step Content
        </p>
      </div>
      <div
        class="flex items-center gap-6 mt-6"
      />
    </div>
  </section>
</div>
`;

exports[`Step Component - Snapshot Tests > renders the Step with Next button disabled 1`] = `
<div>
  <section
    class="flex flex-row border-0 border-t-[1px] border-solid border-t-[--ods-color-neutral-100] pt-5 mb-5"
  >
    <div
      class="basis-[40px]"
    >
      <span
        class="flex justify-center items-center border-2 border-solid rounded-full h-10 w-10 font-semibold text-[16px] leading-[20px] border-[--ods-color-primary-500] text-[--ods-color-text]"
      >
        1
      </span>
    </div>
    <div
      class="basis-full px-5"
    >
      <div
        class="flex flex-col md:flex-row"
      >
        <div
          class="font-normal leading-[43px] flex p-0 m-0 w-full md:w-5/6 text-[--ods-color-text]"
        >
          <h4
            class="_text--heading-4_1aw48_31"
          >
            Test Step
          </h4>
        </div>
      </div>
      <div
        data-testid="subtitle"
      >
        This is a test step
      </div>
      <div
        class="mt-5"
        data-testid="content"
      >
        <p>
          Step Content
        </p>
      </div>
      <div
        class="flex items-center gap-6 mt-6"
      >
        <button
          class="_button_10f3x_2 _button--primary_10f3x_99 _button--md_10f3x_41 _button--default_10f3x_48 w-fit"
          data-testid="next-cta"
          disabled=""
          type="button"
        >
          Next Step
        </button>
      </div>
    </div>
  </section>
</div>
`;

exports[`Step Component - Snapshot Tests > renders the Step with Next button enabled 1`] = `
<div>
  <section
    class="flex flex-row border-0 border-t-[1px] border-solid border-t-[--ods-color-neutral-100] pt-5 mb-5"
  >
    <div
      class="basis-[40px]"
    >
      <span
        class="flex justify-center items-center border-2 border-solid rounded-full h-10 w-10 font-semibold text-[16px] leading-[20px] border-[--ods-color-primary-500] text-[--ods-color-text]"
      >
        1
      </span>
    </div>
    <div
      class="basis-full px-5"
    >
      <div
        class="flex flex-col md:flex-row"
      >
        <div
          class="font-normal leading-[43px] flex p-0 m-0 w-full md:w-5/6 text-[--ods-color-text]"
        >
          <h4
            class="_text--heading-4_1aw48_31"
          >
            Test Step
          </h4>
        </div>
      </div>
      <div
        data-testid="subtitle"
      >
        This is a test step
      </div>
      <div
        class="mt-5"
        data-testid="content"
      >
        <p>
          Step Content
        </p>
      </div>
      <div
        class="flex items-center gap-6 mt-6"
      >
        <button
          class="_button_10f3x_2 _button--primary_10f3x_99 _button--md_10f3x_41 _button--default_10f3x_48 w-fit"
          data-testid="next-cta"
          type="button"
        >
          Next Step
        </button>
      </div>
    </div>
  </section>
</div>
`;

exports[`Step Component - Snapshot Tests > renders the Step with Skip button 1`] = `
<div>
  <section
    class="flex flex-row border-0 border-t-[1px] border-solid border-t-[--ods-color-neutral-100] pt-5 mb-5"
  >
    <div
      class="basis-[40px]"
    >
      <span
        class="flex justify-center items-center border-2 border-solid rounded-full h-10 w-10 font-semibold text-[16px] leading-[20px] border-[--ods-color-primary-500] text-[--ods-color-text]"
      >
        1
      </span>
    </div>
    <div
      class="basis-full px-5"
    >
      <div
        class="flex flex-col md:flex-row"
      >
        <div
          class="font-normal leading-[43px] flex p-0 m-0 w-full md:w-5/6 text-[--ods-color-text]"
        >
          <h4
            class="_text--heading-4_1aw48_31"
          >
            Test Step
          </h4>
          <span
            class="_text--span_1aw48_60 ml-2"
          >
            (Optional)
          </span>
        </div>
      </div>
      <div
        data-testid="subtitle"
      >
        This is a test step
      </div>
      <div
        class="mt-5"
        data-testid="content"
      >
        <p>
          Step Content
        </p>
      </div>
      <div
        class="flex items-center gap-6 mt-6"
      >
        <button
          class="_button_10f3x_2 _button--primary_10f3x_99 _button--md_10f3x_41 _button--ghost_10f3x_150 w-fit"
          type="button"
        >
          Skip this step
        </button>
      </div>
    </div>
  </section>
</div>
`;

exports[`Step Component - Snapshot Tests > renders the Step with Skip button disabled 1`] = `
<div>
  <section
    class="flex flex-row border-0 border-t-[1px] border-solid border-t-[--ods-color-neutral-100] pt-5 mb-5"
  >
    <div
      class="basis-[40px]"
    >
      <span
        class="flex justify-center items-center border-2 border-solid rounded-full h-10 w-10 font-semibold text-[16px] leading-[20px] border-[--ods-color-primary-500] text-[--ods-color-text]"
      >
        1
      </span>
    </div>
    <div
      class="basis-full px-5"
    >
      <div
        class="flex flex-col md:flex-row"
      >
        <div
          class="font-normal leading-[43px] flex p-0 m-0 w-full md:w-5/6 text-[--ods-color-text]"
        >
          <h4
            class="_text--heading-4_1aw48_31"
          >
            Test Step
          </h4>
          <span
            class="_text--span_1aw48_60 ml-2"
          >
            (Optional)
          </span>
        </div>
      </div>
      <div
        data-testid="subtitle"
      >
        This is a test step
      </div>
      <div
        class="mt-5"
        data-testid="content"
      >
        <p>
          Step Content
        </p>
      </div>
      <div
        class="flex items-center gap-6 mt-6"
      >
        <button
          class="_button_10f3x_2 _button--primary_10f3x_99 _button--md_10f3x_41 _button--ghost_10f3x_150 w-fit"
          disabled=""
          type="button"
        >
          Skip this step
        </button>
      </div>
    </div>
  </section>
</div>
`;

exports[`Step Component - Snapshot Tests > renders the Step with Title and Subtitle 1`] = `
<div>
  <section
    class="flex flex-row border-0 border-t-[1px] border-solid border-t-[--ods-color-neutral-100] pt-5 mb-5"
  >
    <div
      class="basis-[40px]"
    >
      <span
        class="flex justify-center items-center border-2 border-solid rounded-full h-10 w-10 font-semibold text-[16px] leading-[20px] border-[--ods-color-primary-500] text-[--ods-color-text]"
      >
        1
      </span>
    </div>
    <div
      class="basis-full px-5"
    >
      <div
        class="flex flex-col md:flex-row"
      >
        <div
          class="font-normal leading-[43px] flex p-0 m-0 w-full md:w-5/6 text-[--ods-color-text]"
        >
          <h4
            class="_text--heading-4_1aw48_31"
          >
            Test Step
          </h4>
        </div>
      </div>
      <div
        data-testid="subtitle"
      >
        This is a test step
      </div>
      <div
        class="mt-5"
        data-testid="content"
      >
        <p>
          Step Content
        </p>
      </div>
      <div
        class="flex items-center gap-6 mt-6"
      />
    </div>
  </section>
</div>
`;

exports[`Step Component - Snapshot Tests > renders the checked and locked Step 1`] = `
<div>
  <section
    class="flex flex-row border-0 border-t-[1px] border-solid border-t-[--ods-color-neutral-100] pt-5 mb-5"
  >
    <div
      class="basis-[40px]"
    >
      <span
        class="_icon_i4xp0_2 _icon--check_i4xp0_61 block p-[12px] text-[20px] text-[--ods-color-primary-500]"
      />
    </div>
    <div
      class="basis-full px-5"
    >
      <div
        class="flex flex-col md:flex-row"
      >
        <div
          class="font-normal leading-[43px] flex p-0 m-0 w-full md:w-5/6 text-[--ods-color-text]"
        >
          <h4
            class="_text--heading-4_1aw48_31"
          >
            Test Step
          </h4>
        </div>
      </div>
      <div
        data-testid="subtitle"
      >
        This is a test step
      </div>
      <div
        class="mt-5 cursor-not-allowed pointer-events-none opacity-50"
        data-testid="content"
      >
        Test Body
      </div>
    </div>
  </section>
</div>
`;

exports[`Step Component - Snapshot Tests > renders the closed Step 1`] = `
<div>
  <section
    class="flex flex-row border-0 border-t-[1px] border-solid border-t-[--ods-color-neutral-100] pt-5 mb-5"
  >
    <div
      class="basis-[40px]"
    >
      <span
        class="_icon_i4xp0_2 _icon--check_i4xp0_61 block p-[12px] text-[20px] text-[--ods-color-primary-500]"
      />
    </div>
    <div
      class="basis-full px-5"
    >
      <div
        class="flex flex-col md:flex-row"
      >
        <div
          class="font-normal leading-[43px] flex p-0 m-0 w-full md:w-5/6 text-[--ods-color-neutral-500]"
        >
          <h4
            class="_text--heading-4_1aw48_31"
          >
            Test Step
          </h4>
        </div>
      </div>
    </div>
  </section>
</div>
`;
